--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
-Flask==0.10.1
-future==0.16.0
+beautifulsoup4==4.4.1
+numpy==1.11.0
+oauthlib==1.0.3
+psycopg2==2.7.1
+PyAudio==0.2.8
+pyglet==1.2.4
+requests==2.9.1
+requests-oauthlib==0.6.0
+six==1.10.0
+SpeechRecognition==3.1.0
+TwitterAPI==2.4.1
